# mora

./: CMakeLists.txt  LPS.cpp  LPS.h  byte_utils.cpp  byte_utils.h  constants.h  key_utils.cpp  key_utils.h  main.cpp  mora.cpp  mora.h
HashStat/: words_hashing.py
attacks/: BP.cpp  BP.h
mora/: byte_utils.cpp  mora.cpp  mora.h  test_of_parts.cpp  test_of_parts.h
sponge/: sponge_construction.cpp  sponge_construction.h  sponge_crypto.cpp  sponge_crypto.h
